--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -21,8 +21,12 @@
 .sidebar{
 background-color: var(--color-grey-dark-1);
 flex: 0 0 18%;//flex grow ,flex shrink, flex basis = width
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 }
 .hotel-view {
     background-color: #fff;
     flex: 1;
+    height: 80rem;
 }
