--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,24 +9,45 @@
     height: 7rem;
     font-size: 1.4rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.content{
+.content {
     display: flex;
     // background-color: var(--color-grey-light-2);
 }
-.sidebar{
-background-color: var(--color-grey-dark-1);
-flex: 0 0 18%;//flex grow ,flex shrink, flex basis = width
-display: flex;
-flex-direction: column;
-justify-content: space-between;
+.sidebar {
+    background-color: var(--color-grey-dark-1);
+    flex: 0 0 18%; //flex grow ,flex shrink, flex basis = width
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .hotel-view {
     background-color: #fff;
     flex: 1;
-    height: 80rem;
+
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    
+}
+
+.user-reviews {
+    flex: 1;
 }
