--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,6 +32,7 @@
 }
 
 .detail {
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
@@ -50,4 +51,7 @@
 
 .user-reviews {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
