--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,6 +35,13 @@ Grey dark 3: #999
     --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
     --line:1px solid var(--color-grey-light-2);
 }
+//css variables don't work with media queries that's why using sass.
+$bp-largest:75em;//1200px=>1200/16=75em
+$bp-large:68.75em;//1100px
+$bp-medium:56.25em;//900px
+$bp-small:37.5em;//600px
+$bp-smallest:31.25em;//500px
+
 * {
     margin: 0;
     padding: 0;
@@ -49,6 +56,10 @@ Grey dark 3: #999
 html {
     box-sizing: border-box;
     font-size: 62.5%; //10px/16px*100 =62.5=>1rem=10px
+
+    @media only screen and (max-width:$bp-large){
+        font-size: 50%;
+    }
 }
 
 body {
