--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,8 @@ body {
   background-color: #fff;
   border-bottom: var(--line);
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
   @media only screen and (max-width: 31.25em) {
     .header {
       flex-wrap: wrap;
@@ -472,7 +473,7 @@ body {
     left: -1rem;
     line-height: 1;
     font-size: 20rem;
-    color: var(--color-grey-light-2);
+    color: var(--color-grey-light-3);
     font-family: sans-serif;
     z-index: 1; }
 
