--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -18,6 +18,7 @@
     border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
+    align-items: center;
     
     @media only screen and (max-width:$bp-smallest){
         flex-wrap: wrap;
